--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,9 +1,13 @@
 .website-footer {
     width: 100%;
-    height: 10rem;
+    height: 4rem;
     background-color: var(--dark);
+    margin-top: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .website-footer * {
-    color: var(--dark);
+    color: var(--white);
 }
