--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 768px)
 {
     .modal {
-        width: 80%;
+        width: 100%;
         position: absolute;
         background-color: var(--dark);
         display: flex;
@@ -9,6 +9,7 @@
         align-items: center;
         position: fixed;
         top: 3rem;
+        right: 0;
     }
 
     .modal * {
@@ -21,6 +22,10 @@
 
     .modal-close {
         display: none;
+    }
+
+    h2 {
+        font-size: 20px;
     }
 
 }
