--- a/src/assets/css/registration.css
+++ b/src/assets/css/registration.css
@@ -78,3 +78,29 @@
 .submit {
     padding: 0 1rem;
 }
+
+@media screen and (max-width: 768px)
+{
+    .form-content-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form-label-container:last-child {
+        margin-left: 0;
+        margin-top: 15px;
+    }
+
+    .form-label-container {
+        width: 80%;
+    }
+
+    .register-with-other {
+        flex-wrap: wrap;
+    }
+
+    .register-with-other .connect-with-other:last-child {
+        margin-left: 0;
+        margin-top: 15px;
+    }
+}
